--- a/index.html
+++ b/index.html
@@ -2,3 +2,10 @@
 title: xxoo
 layout: default
 ---
+{{ page.title }}
+ 
+{% for post in site.posts %}
+ 
+{{ post.date|date_to_string }} <a href='{{ site.baseurl }}{{ post.url }}'>{{ post.title }}</a>
+ 
+{% endfor %}
